--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
         <a href="#">
-            <h1><img src="logo.svg" height="50">Residue</h1>
+            <h1><img src="logo.svg">Residue</h1>
         </a>
         <nav>
             <a href="#">Link 1</a>
