--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
         <q>Lorem ipsum dolor sit amet</q>
-        <code>
-            code block
-        </code>
+        <pre><code>preformatted code block</code></pre>
+        <code>code</code>
         <kbd>keyboard</kbd>
         <output>output</output>
         <samp>samp</samp>
